Fixed Spacing Issues and Project List Height

--- a/src/routes/Projects.css
+++ b/src/routes/Projects.css
@@ -66,7 +66,7 @@ repeating-linear-gradient(
     background-color: rgb(218, 218, 218);
 }
 
-.styled {
+.styled a {
     padding: 1%;
 }
 
@@ -103,14 +103,14 @@ repeating-linear-gradient(
 .projects__search {
     font-family: sans-serif, 'Font Awesome 5 Free';
     width: 100%;
-    height: 40px;
+    height: 5%;
     /* margin-bottom: 5%; */
 }
 
 .projects__list {
-    max-height: 85%;
     overflow-y: scroll;
     overflow-x: hidden;
+    max-height: 90%;
 }
 
 
@@ -123,5 +123,13 @@ repeating-linear-gradient(
 
     .projects__body {
         width: 50%;
+    }
+
+    .projects__search {
+        height: 40px;
+    }
+
+    .projects__list {
+        max-height: 95%;
     }
 }
